fix: make card smaller on small screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -113,7 +113,7 @@ $breakpoint-tablet: 768px;
       margin-left: 20px;
       margin-right: 20px;
       margin-bottom: 30px;
-      width: 300px;
+      width: 90%;
       min-width: 100px;
     }
   }
